Post CCN commit

--- a/src/models/07-save-network-activations-fg-bg.ipynb
+++ b/src/models/07-save-network-activations-fg-bg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "a96d4df9",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "63a3c72e",
    "metadata": {},
    "outputs": [],
@@ -54,13 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "0593f040",
    "metadata": {},
    "outputs": [],
    "source": [
     "n_timesteps = 5\n",
-    "layers = ['conv1', 'conv2', 'conv3', 'conv4_W', 'fc6_W']"
+    "layers = ['conv1', 'conv2', 'conv3', 'conv4_W', 'conv5_W', 'fc6_W']"
    ]
   },
   {
@@ -73,20 +73,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "7152498c",
    "metadata": {},
    "outputs": [],
    "source": [
     "engram_dir = '/mnt/smb/locker/abbott-locker/hcnn/'\n",
-    "activations_dir = f'{engram_dir}activations_pnet/'\n",
+    "activations_dir = f'{engram_dir}activations_pnet_all/'\n",
     "checkpoints_dir = f'{engram_dir}checkpoints/'\n",
     "tensorboard_dir = f'{engram_dir}tensorboard/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "71f2cbd0",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "d7296d6f",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "487e4be1",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "bda98679",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "c486a367",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "58884191",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "id": "b123dc2c",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "id": "cc0a5249",
    "metadata": {},
    "outputs": [],
@@ -275,15 +275,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "id": "8c206980",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/share/issa/users/es3773/hallucnn/src/models/layers.py:78: UserWarning: Inconsistent tf pad calculation in ConvLayer.\n",
+      "  warnings.warn('Inconsistent tf pad calculation in ConvLayer.')\n",
+      "/share/issa/users/es3773/hallucnn/src/models/layers.py:173: UserWarning: Inconsistent tf pad calculation: 0, 1\n",
+      "  warnings.warn(f'Inconsistent tf pad calculation: {pad_left}, {pad_right}')\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fg\n",
       "Loaded Pnet: pnet\n",
       "PCoder1 : ffm: 0.300 \t fbm: 0.300 \t erm: 0.010\n",
       "PCoder2 : ffm: 0.300 \t fbm: 0.300 \t erm: 0.010\n",
@@ -301,31 +310,16 @@
       "/home/es3773/.conda/envs/hcnn/lib/python3.6/site-packages/predify/modules/base.py:260: UserWarning: Using a target size (torch.Size([164, 400])) that is different to the input size (torch.Size([1, 1, 164, 400])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  self.prediction_error  = nn.functional.mse_loss(self.prd, target)\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bg_july22\n",
-      "Loaded Pnet: pnet\n",
-      "PCoder1 : ffm: 0.300 \t fbm: 0.300 \t erm: 0.010\n",
-      "PCoder2 : ffm: 0.300 \t fbm: 0.300 \t erm: 0.010\n",
-      "PCoder3 : ffm: 0.300 \t fbm: 0.300 \t erm: 0.010\n",
-      "PCoder4 : ffm: 0.300 \t fbm: 0.300 \t erm: 0.010\n",
-      "PCoder5 : ffm: 0.300 \t fbm: 0.300 \t erm: 0.010\n"
-     ]
     }
    ],
    "source": [
-    "for file in files:\n",
-    "    print(file)\n",
-    "    hdf5_path = f'{activations_dir}{file}.hdf5'\n",
-    "    #hyperparams = get_hyperparams(tf_dir, bg, snr)\n",
-    "    pnet = load_pnet(PNetClass, pnet_name, chckpt, hyperparams=None)\n",
-    "    data = h5py.File(f'{engram_dir}{file}.hdf5', 'r')\n",
-    "    data = np.array(f['data']).reshape((-1, 164, 400))\n",
-    "    data = torch.tensor(data).to(DEVICE)\n",
-    "    save_activations(pnet, data, hdf5_path)"
+    "hdf5_path = f'{activations_dir}natural_sounds.hdf5'\n",
+    "#hyperparams = get_hyperparams(tf_dir, bg, snr)\n",
+    "pnet = load_pnet(PNetClass, pnet_name, chckpt, hyperparams=None)\n",
+    "loaded_f = h5py.File(f'{engram_dir}165_natural_sounds_not_resampled.hdf5', 'r')\n",
+    "data = np.array(loaded_f['data']).reshape((-1, 164, 400))\n",
+    "data = torch.tensor(data).to(DEVICE)\n",
+    "save_activations(pnet, data, hdf5_path)"
    ]
   },
   {
