Remove unit corr and undead unit notebooks

--- a/notebooks/08-eval-accuracy.ipynb
+++ b/notebooks/08-eval-accuracy.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f2a59db0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +28,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "283b7933",
    "metadata": {},
    "source": [
     "# Parameters"
@@ -38,7 +36,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "a76ea94e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +48,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "3c878997",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +65,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "003cb624",
    "metadata": {},
    "source": [
     "# Function to collect accuracy values"
@@ -78,7 +73,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "5aa256d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +112,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "9c82f79a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +123,6 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "9eb76562",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +132,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa189a50",
    "metadata": {},
    "source": [
     "# By splitting trial type"
@@ -149,7 +140,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "71418f4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +149,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c3c91608",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +158,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4538e9ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +212,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a27059b0",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +236,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ddb9ab7f",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +260,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1945f7ff",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +284,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7ceefe5e",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +308,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "42129b36",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +331,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "457da87d",
    "metadata": {},
    "source": [
     "# All"
@@ -357,7 +339,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "60f1cdc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +395,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31cac73f",
    "metadata": {},
    "source": [
     "# Collapsed across BG"
@@ -423,7 +403,6 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "82f947f1",
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +448,6 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "7d3db08f",
    "metadata": {
     "scrolled": true
    },
@@ -517,7 +495,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "412f14ab",
    "metadata": {
     "scrolled": true
    },
@@ -565,7 +542,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a694e90d",
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +571,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e271d215",
    "metadata": {},
    "source": [
     "# Collapsed across SNR"
@@ -604,7 +579,6 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "a5c8545d",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +625,6 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "08eb7bb0",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +671,6 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "f158d087",
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +716,6 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "af3f44a9",
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +762,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "0212e7d8",
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +793,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b0ba430",
    "metadata": {},
    "source": [
     "# As percent fold change"
@@ -832,7 +801,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "041fb675",
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +822,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4004b6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +845,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22844e74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,7 +877,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43d32e23",
    "metadata": {},
    "source": [
     "# FF Incorrect, Clean Correct"
@@ -920,7 +885,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f35e45fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +912,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b90babf",
    "metadata": {},
    "source": [
     "# FF Correct, Clean Correct"
@@ -957,7 +920,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59896c7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +947,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "964ac3ad",
    "metadata": {},
    "source": [
     "# FF Incorrect, Clean Incorrect"
@@ -994,7 +955,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfc3cfca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,7 +983,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08f8a674",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1031,7 +990,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d49f29e0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1039,7 +997,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1053,7 +1011,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
