--- a/notebooks/07-save-network-activations.ipynb
+++ b/notebooks/07-save-network-activations.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a96d4df9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +30,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abfe5e29",
    "metadata": {},
    "source": [
     "# PNet parameters"
@@ -40,7 +38,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "63a3c72e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +51,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99f32ec5",
    "metadata": {},
    "source": [
     "# Paths to relevant directories"
@@ -63,7 +59,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7152498c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +71,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "96689593",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +80,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "71f2cbd0",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +97,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b3174fa",
    "metadata": {},
    "source": [
     "# Helper functions to load network"
@@ -113,7 +105,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72ace6a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +132,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "487e4be1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +155,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bda98679",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +165,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3a1718c",
    "metadata": {},
    "source": [
     "# Helper functions to save activations"
@@ -185,7 +173,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c486a367",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +186,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "58884191",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +208,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b123dc2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +288,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "364b16d6",
    "metadata": {},
    "source": [
     "# Run activation-saving functions"
@@ -312,7 +296,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "cc0a5249",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +306,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8c206980",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +409,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4dc5059",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -435,7 +416,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -449,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
