--- a/notebooks/16a-generate-gamma-reconstruction-dataset.ipynb
+++ b/notebooks/16a-generate-gamma-reconstruction-dataset.ipynb
@@ -321,9 +321,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:.conda-hcnn]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-.conda-hcnn-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -335,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
