--- a/notebooks/07-save-network-activations.ipynb
+++ b/notebooks/07-save-network-activations.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "1bbbbfeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +31,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a02b0341",
    "metadata": {},
    "source": [
     "# PNet parameters"
@@ -38,6 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "4d2132a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +54,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "73a66af1",
    "metadata": {},
    "source": [
     "# Paths to relevant directories"
@@ -59,6 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "7618d7e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "22300c15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "85ae5ddb",
    "metadata": {},
    "outputs": [
     {
@@ -97,6 +104,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0ab4f956",
    "metadata": {},
    "source": [
     "# Helper functions to load network"
@@ -105,6 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7fac04a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,6 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "f13476e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,6 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "74ba5aea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,6 +176,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "45bfbe0b",
    "metadata": {},
    "source": [
     "# Helper functions to save activations"
@@ -173,6 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "a1427c13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,6 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "9888b21c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,6 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "6ebb5c7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,6 +303,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "585a38e0",
    "metadata": {},
    "source": [
     "# Run activation-saving functions"
@@ -296,6 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "9d4810ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,6 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "491f90e0",
    "metadata": {},
    "outputs": [
     {
@@ -409,6 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5fef852a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -416,7 +435,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -430,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
