--- a/notebooks/08-eval-accuracy.ipynb
+++ b/notebooks/08-eval-accuracy.ipynb
@@ -204,7 +204,7 @@
     "            \n",
     "            birthtime = pathlib.Path(results_filepath).stat().st_ctime\n",
     "            creation_month = datetime.datetime.fromtimestamp(birthtime).month\n",
-    "            if creation_month != 8: continue\n",
+    "            #if creation_month != 8: continue\n",
     "                \n",
     "            results = h5py.File(results_filepath, 'r')\n",
     "            timesteps, accs, rel_accs, ff_corrects, clean_corrects = eval_accuracy(results)\n",
