Update scripts for getting population denoising metrics

--- a/notebooks/11-calc-popln-denoising.ipynb
+++ b/notebooks/11-calc-popln-denoising.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "085eb559",
    "metadata": {},
    "outputs": [],
@@ -25,8 +25,7 @@
     "from predify.utils.training import train_pcoders, eval_pcoders\n",
     "\n",
     "from models.networks_2022 import BranchedNetwork\n",
-    "from data.CleanSoundsDataset import CleanSoundsDataset\n",
-    "from data.NoisyDataset import NoisyDataset"
+    "from data.NoisyDataset import NoisyDataset, FullNoisyDataset"
    ]
   },
   {
@@ -39,21 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "2be7bfb8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "exp = 'pnet'\n",
     "engram_dir = '/mnt/smb/locker/abbott-locker/hcnn/'\n",
-    "checkpoints_dir = f'{engram_dir}checkpoints/'\n",
-    "tensorboard_dir = f'{engram_dir}tensorboard/'\n",
-    "activations_dir = f'{engram_dir}activations_pnet_all/'\n",
-    "pickles_dir = f'{engram_dir}pickles/'"
+    "activations_dir = f'{engram_dir}3_activations/{exp}/'\n",
+    "pickles_dir = f'{engram_dir}pickles/{exp}_denoising/'\n",
+    "os.makedirs(pickles_dir, exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "104d0ce3",
    "metadata": {},
    "outputs": [
@@ -80,17 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3d8fb7a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.stats import pearsonr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "fdc3533a",
    "metadata": {},
    "outputs": [],
@@ -187,7 +176,6 @@
     "\n",
     "    return np.mean(out)\n",
     "\n",
-    "from scipy.stats import pearsonr\n",
     "def pearsonr_sim(A, B):\n",
     "    if torch.is_tensor(A):\n",
     "        A = A.numpy()\n",
@@ -203,6 +191,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "52ec993c",
+   "metadata": {},
+   "source": [
+    "# Accuracy evaluation function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b144e32f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval_accuracy(results):\n",
+    "    \"\"\" t is the timestep to eval \"\"\"\n",
+    "    accuracies = [] # for timesteps {0,1,2,3,4}\n",
+    "    n_timesteps = 4\n",
+    "    labels = np.array(results['label'])\n",
+    "    for t in range(n_timesteps+1):\n",
+    "        acc_t = np.mean((results[f'{t}_output'] == labels))\n",
+    "        accuracies.append(acc_t)\n",
+    "    return accuracies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "954794a4",
    "metadata": {},
    "source": [
@@ -211,73 +225,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "id": "179c44e3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def eval_correlations(results, dist_func, undead_units):\n",
+    "def eval_correlations(results, dist_func, accs):\n",
     "    labels = np.array(results['label'])\n",
     "    idxs = np.arange(labels.size)\n",
     "    \n",
     "    popln_shuffle = []\n",
-    "    popln_shuffle_undead = []\n",
+    "    popln_sim = []\n",
     "    popln_timestep = []\n",
     "    popln_layer = []\n",
+    "    valid_score = []\n",
     "    \n",
-    "    unit_shuffle = []\n",
-    "    unit_shuffle_alive = []\n",
-    "    unit_timestep = []\n",
-    "    unit_layer = []\n",
     "    layers = ['conv1', 'conv2', 'conv3', 'conv4_W', 'conv5_W', 'fc6_W']\n",
     "    \n",
-    "    n_timesteps = 5\n",
-    "    for t in range(n_timesteps):\n",
+    "    n_timesteps = 4\n",
+    "    for t in range(n_timesteps+1):\n",
     "        for l in layers:\n",
-    "            unit_noisy_response = []\n",
-    "            unit_clean_response = []\n",
-    "            undead_units_l = undead_units[l]\n",
     "            for i in idxs:\n",
     "                noisy_activ = results[f'{l}_{t}_activations'][i]\n",
-    "                clean_activ = results[f'{l}_{t}_clean_activations'][np.random.choice(idxs)]\n",
+    "                shuff_idx = np.random.choice(idxs)\n",
+    "                shuff_activ = results[f'{l}_{t}_clean_activations'][shuff_idx]\n",
+    "                clean_activ = results[f'{l}_{t}_clean_activations'][i]\n",
     "                noisy_activ = noisy_activ.flatten()\n",
+    "                shuff_activ = shuff_activ.flatten()\n",
     "                clean_activ = clean_activ.flatten()\n",
-    "                unit_noisy_response.append(noisy_activ)\n",
-    "                unit_clean_response.append(clean_activ)\n",
-    "\n",
-    "                # Popln Corr\n",
     "                dist = dist_func(noisy_activ, clean_activ)\n",
-    "                dist_undead = dist_func(\n",
-    "                    noisy_activ[undead_units_l],\n",
-    "                    clean_activ[undead_units_l]\n",
-    "                    )\n",
-    "                popln_shuffle.append(dist)\n",
-    "                popln_shuffle_undead.append(dist_undead)\n",
+    "                shuff_dist = dist_func(noisy_activ, shuff_activ)\n",
+    "                popln_shuffle.append(shuff_dist)\n",
+    "                popln_sim.append(dist)\n",
     "                popln_timestep.append(t)\n",
     "                popln_layer.append(l)\n",
-    "\n",
-    "            # Popln Corr\n",
-    "            unit_noisy_response = np.array(unit_noisy_response)\n",
-    "            unit_clean_response = np.array(unit_clean_response)\n",
-    "            for unit in np.arange(unit_noisy_response.shape[1]):               \n",
-    "                dist = dist_func(\n",
-    "                    unit_noisy_response[:,unit],\n",
-    "                    unit_clean_response[:,unit]\n",
-    "                    )\n",
-    "                unit_shuffle.append(dist)\n",
-    "                unit_shuffle_alive.append(undead_units_l[unit])\n",
-    "                unit_timestep.append(t)\n",
-    "                unit_layer.append(l)\n",
+    "                valid_score.append(accs[t])\n",
     "        \n",
     "    results = {\n",
     "        'popln_shuffle': popln_shuffle,\n",
-    "        'popln_shuffle_undead': popln_shuffle_undead,\n",
+    "        'popln_sim': popln_sim,\n",
     "        'popln_timestep': popln_timestep,\n",
     "        'popln_layer': popln_layer,\n",
-    "        'unit_shuffle': unit_shuffle,\n",
-    "        'unit_shuffle_alive': unit_shuffle_alive,\n",
-    "        'unit_timestep': unit_timestep,\n",
-    "        'unit_layer': unit_layer\n",
+    "        'valid_score': valid_score\n",
     "        }\n",
     "    return results"
    ]
@@ -292,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "id": "b57144d1",
    "metadata": {},
    "outputs": [],
@@ -304,29 +293,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "id": "dd7cdace",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_prefix = 'shuffle_pearsonr'\n",
+    "file_prefix = 'pearsonr'\n",
     "dist_func = pearsonr_sim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "id": "ddb89f38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bgs = ['AudScene'] #, 'AudScene', 'Babble8Spkr']\n",
-    "snrs = [3.]"
+    "bgs = ['pinkNoise', 'AudScene', 'Babble8Spkr']\n",
+    "snrs = [-9., -6., -3., 0., 3.]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "id": "fd24af30",
    "metadata": {},
    "outputs": [],
@@ -340,29 +329,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "b329e822",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(f'{pickles_dir}dead_units.p', 'rb') as f:\n",
-    "    undead_units = pickle.load(f)['undead_units']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "fee1914e",
    "metadata": {},
    "outputs": [],
    "source": [
     "for bg in bgs:\n",
     "    for snr in snrs:\n",
-    "        results_path = f'{activations_dir}{bg}_snr{int(snr)}.hdf5'\n",
-    "        results = h5py.File(results_path, 'r')\n",
-    "        results = eval_correlations(\n",
-    "            results, dist_func, undead_units\n",
-    "            )\n",
+    "        bg_snr_activations_dir = f'{activations_dir}{bg}_snr{int(snr)}/'\n",
+    "        results = {\n",
+    "            'popln_shuffle': [], 'popln_timestep': [],\n",
+    "            'popln_sim': [], 'popln_layer': [], 'valid_score': []}\n",
+    "        for hdf5_file in os.listdir(bg_snr_activations_dir):\n",
+    "            hdf5_path = f'{bg_snr_activations_dir}{hdf5_file}'\n",
+    "            hdf5_data = h5py.File(hdf5_path, 'r')\n",
+    "            accs = eval_accuracy(hdf5_data)\n",
+    "            _results = eval_correlations(hdf5_data, dist_func, accs)\n",
+    "            for key in results.keys():\n",
+    "                results[key].extend(_results[key])\n",
     "        with open(f'{pickles_dir}{file_prefix}_{bg}_snr{snr}.p', 'wb') as f:\n",
     "            pickle.dump(results, f)"
    ]
@@ -370,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a184a16",
+   "id": "18787069",
    "metadata": {},
    "outputs": [],
    "source": []
