--- a/notebooks/04-train-hyperparameters.ipynb
+++ b/notebooks/04-train-hyperparameters.ipynb
@@ -12,8 +12,6 @@
     "import numpy as np\n",
     "import gc\n",
     "import h5py\n",
-    "root = os.path.dirname(os.path.abspath(os.curdir))\n",
-    "sys.path.append(root)\n",
     "\n",
     "import torch\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
@@ -23,9 +21,9 @@
     "from predify.utils.training import train_pcoders, eval_pcoders\n",
     "\n",
     "from models.networks_2022 import BranchedNetwork\n",
-    "from data.ReconstructionTrainingDataset import CleanSoundsDataset\n",
     "from data.NoisyDataset import NoisyDataset, FullNoisyDataset, LargeNoisyDataset\n",
-    "from data.MergedNoisyDataset import MergedNoisyDataset"
+    "root = os.path.dirname(os.path.abspath(os.curdir))\n",
+    "sys.path.append(root)"
    ]
   },
   {
@@ -38,32 +36,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5fb90b6f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Main args\n",
-    "SAME_PARAM = False           # to use the same parameters for all pcoders or not\n",
-    "noise_types = ['AudScene']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "5fae3c2f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dataset configuration\n",
+    "noise_types = ['AudScene']\n",
     "snr_levels = [-9.]\n",
+    "LR_SCALING = 0.01\n",
     "BATCH_SIZE = 10\n",
     "NUM_WORKERS = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "6dfb56ab",
    "metadata": {},
    "outputs": [],
@@ -76,15 +64,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "08c99b11",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Path names\n",
     "engram_dir = '/mnt/smb/locker/abbott-locker/hcnn/'\n",
-    "checkpoints_dir = f'{engram_dir}checkpoints/'\n",
-    "tensorboard_dir = f'{engram_dir}tensorboard/fb_ablation/'"
+    "checkpoints_dir = f'{engram_dir}1_checkpoints/'\n",
+    "tensorboard_dir = f'{engram_dir}2_hyperp/test/'"
    ]
   },
   {
@@ -97,21 +85,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "6c7bb8e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if SAME_PARAM:\n",
-    "    from pbranchednetwork_shared import PBranchedNetwork_SharedSameHP\n",
-    "    PNetClass = PBranchedNetwork_SharedSameHP\n",
-    "    pnet_name = 'pnet'\n",
-    "    fb_state_dict_path = f'{checkpoints_dir}{pnet_name}/{pnet_name}-shared-50-regular.pth'\n",
-    "else:\n",
-    "    from pbranchednetwork_all import PBranchedNetwork_AllSeparateHP\n",
-    "    PNetClass = PBranchedNetwork_AllSeparateHP\n",
-    "    pnet_name = 'pnet'\n",
-    "    fb_state_dict_path = f'{checkpoints_dir}{pnet_name}/{pnet_name}-50-regular.pth'\n",
+    "from models.pbranchednetwork_all import PBranchedNetwork_AllSeparateHP\n",
+    "PNetClass = PBranchedNetwork_AllSeparateHP\n",
+    "pnet_name = 'pnet'\n",
+    "fb_state_dict_path = f'{checkpoints_dir}{pnet_name}/{pnet_name}-50-regular.pth'\n",
     "fb_state_dict = torch.load(fb_state_dict_path)"
    ]
   },
@@ -125,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "6d783f4c",
    "metadata": {},
    "outputs": [],
@@ -141,6 +123,14 @@
     "        )\n",
     "\n",
     "    pnet.load_state_dict(state_dict)\n",
+    "    hyperparams = []\n",
+    "    for i in range(1, 6):\n",
+    "        hps = {}\n",
+    "        hps['ffm'] = ff_multiplier\n",
+    "        hps['fbm'] = fb_multiplier\n",
+    "        hps['erm'] = er_multiplier\n",
+    "        hyperparams.append(hps)\n",
+    "    pnet.set_hyperparameters(hyperparams)\n",
     "    pnet.eval()\n",
     "    pnet.to(device)\n",
     "    return pnet"
@@ -148,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "2e13f12f",
    "metadata": {},
    "outputs": [],
@@ -186,55 +176,104 @@
     "                f\"{tag}Perf/Epoch#{epoch}\",\n",
     "                correct[tt], tt\n",
     "                )\n",
-    "    print()\n"
+    "    print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "d32cdda2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(net, epoch, dataloader, timesteps, loss_function, optimizer, writer=None):\n",
-    "    for batch_index, (images, labels) in enumerate(dataloader):\n",
-    "        net.reset()\n",
+    "def train_and_eval(noise_type, snr_level):\n",
+    "    # Load noisy data\n",
+    "    noisy_ds = LargeNoisyDataset(bg=noise_type, snr=snr_level)\n",
+    "    noise_loader = torch.utils.data.DataLoader(\n",
+    "        noisy_ds,  batch_size=BATCH_SIZE,\n",
+    "        shuffle=True, drop_last=False,\n",
+    "        num_workers=NUM_WORKERS\n",
+    "        )\n",
     "\n",
-    "        labels = labels.cuda()\n",
-    "        images = images.cuda()\n",
+    "    # Set up logs and network for training\n",
+    "    net_dir = f'hyper_{noise_type}_snr{snr_level}'\n",
+    "    if not FF_START:\n",
+    "        net_dir += '_randomInit'\n",
+    "    if SAME_PARAM:\n",
+    "        net_dir += '_shared'\n",
     "\n",
-    "        ttloss = np.zeros((timesteps+1))\n",
-    "        optimizer.zero_grad()\n",
+    "    sumwriter = SummaryWriter(f'{tensorboard_dir}{net_dir}')\n",
+    "    net = BranchedNetwork() # Load original network\n",
+    "    net.load_state_dict(torch.load(f'{engram_dir}networks_2022_weights.pt'))\n",
+    "    pnet_fw = load_pnet( # Load FF PNet\n",
+    "        net, fb_state_dict, build_graph=False, random_init=(not FF_START),\n",
+    "        ff_multiplier=1.0, fb_multiplier=0.0, er_multiplier=0.0,\n",
+    "        same_param=SAME_PARAM, device='cuda:0'\n",
+    "        )\n",
+    "    loss_function = torch.nn.CrossEntropyLoss()\n",
+    "    evaluate(\n",
+    "        pnet_fw, 0, noise_loader, 1,\n",
+    "        loss_function,\n",
+    "        writer=sumwriter, tag='FeedForward')\n",
+    "    del pnet_fw\n",
+    "    gc.collect()\n",
     "\n",
-    "        for tt in range(timesteps+1):\n",
-    "            if tt == 0:\n",
-    "                outputs, _ = net(images)\n",
-    "                loss = loss_function(outputs, labels)\n",
-    "                ttloss[tt] = loss.item()\n",
-    "            else:\n",
-    "                outputs, _ = net()\n",
-    "                current_loss = loss_function(outputs, labels)\n",
-    "                ttloss[tt] = current_loss.item()\n",
-    "                loss += current_loss\n",
-    "        \n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        net.update_hyperparameters()\n",
-    "            \n",
-    "        print(f\"Training Epoch: {epoch} [{batch_index * BATCH_SIZE + len(images)}/{len(dataloader.dataset)}]\\tLoss: {loss.item():0.4f}\\tLR: {optimizer.param_groups[0]['lr']:0.6f}\")\n",
-    "        for tt in range(timesteps+1):\n",
-    "            print(f'{ttloss[tt]:0.4f}\\t', end='')\n",
-    "        print()\n",
-    "        if writer is not None:\n",
-    "            writer.add_scalar(\n",
-    "                f\"TrainingLoss/CE\", loss.item(),\n",
-    "                (epoch-1)*len(dataloader) + batch_index\n",
-    "                )\n"
+    "    # Load PNet for hyperparameter optimization\n",
+    "    net = BranchedNetwork()\n",
+    "    net.load_state_dict(torch.load(f'{engram_dir}networks_2022_weights.pt'))\n",
+    "    ffm = np.random.uniform()\n",
+    "    fbm = np.random.uniform(high=1.-ffm)\n",
+    "    erm = np.random.uniform()*0.1\n",
+    "    pnet = load_pnet(\n",
+    "        net, fb_state_dict, build_graph=True, random_init=(not FF_START),\n",
+    "        ff_multiplier=ffm, fb_multiplier=fbm, er_multiplier=erm,\n",
+    "        same_param=SAME_PARAM, device='cuda:0'\n",
+    "        )\n",
+    "\n",
+    "    # Set up loss function and hyperparameters\n",
+    "    loss_function = torch.nn.CrossEntropyLoss()\n",
+    "    hyperparams = [*pnet.get_hyperparameters()]\n",
+    "    fffbmem_hp = []\n",
+    "    erm_hp = []\n",
+    "    for pc in range(pnet.number_of_pcoders):\n",
+    "        fffbmem_hp.extend(hyperparams[pc*4:pc*4+3])\n",
+    "        erm_hp.append(hyperparams[pc*4+3])\n",
+    "    optimizer = torch.optim.Adam([\n",
+    "        {'params': fffbmem_hp, 'lr':0.01*LR_SCALING},\n",
+    "        {'params': erm_hp, 'lr':0.0001*LR_SCALING}], weight_decay=0.00001)\n",
+    "\n",
+    "    # Log initial hyperparameter and eval values\n",
+    "    log_hyper_parameters(pnet, 0, sumwriter, same_param=SAME_PARAM)\n",
+    "    hps = pnet.get_hyperparameters_values()\n",
+    "    print(hps)\n",
+    "    evaluate(\n",
+    "        pnet, 0, noise_loader,\n",
+    "        MAX_TIMESTEP, loss_function,\n",
+    "        writer=sumwriter, tag='Noisy'\n",
+    "        )\n",
+    "\n",
+    "    # Run epochs\n",
+    "    for epoch in range(1, EPOCH+1):\n",
+    "        train(\n",
+    "            pnet, epoch, noise_loader,\n",
+    "            MAX_TIMESTEP, loss_function, optimizer,\n",
+    "            writer=sumwriter\n",
+    "            )\n",
+    "        log_hyper_parameters(pnet, epoch, sumwriter, same_param=SAME_PARAM)\n",
+    "        hps = pnet.get_hyperparameters_values()\n",
+    "        print(hps)\n",
+    "\n",
+    "        evaluate(\n",
+    "            pnet, epoch, noise_loader,\n",
+    "            MAX_TIMESTEP, loss_function,\n",
+    "            writer=sumwriter, tag='Noisy'\n",
+    "            )\n",
+    "    sumwriter.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "68603d8c",
    "metadata": {},
    "outputs": [],
@@ -274,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "5cf6488b",
    "metadata": {},
    "outputs": [],
@@ -306,8 +345,6 @@
     "    net_dir = f'hyper_{noise_type}_snr{snr_level}'\n",
     "    if FF_START:\n",
     "        net_dir += '_FFstart'\n",
-    "    if SAME_PARAM:\n",
-    "        net_dir += '_shared'\n",
     "\n",
     "    sumwriter = SummaryWriter(f'{tensorboard_dir}{net_dir}')\n",
     "    net = BranchedNetwork() # Load original network\n",
@@ -315,7 +352,7 @@
     "    pnet_fw = load_pnet( # Load FF PNet\n",
     "        net, fb_state_dict, build_graph=False, random_init=(not FF_START),\n",
     "        ff_multiplier=1.0, fb_multiplier=0.0, er_multiplier=0.0,\n",
-    "        same_param=SAME_PARAM, device='cuda:0'\n",
+    "        same_param=False, device='cuda:0'\n",
     "        )\n",
     "    loss_function = torch.nn.CrossEntropyLoss()\n",
     "    evaluate(\n",
@@ -331,26 +368,24 @@
     "    pnet = load_pnet(\n",
     "        net, fb_state_dict, build_graph=True, random_init=(not FF_START),\n",
     "        ff_multiplier=0.33, fb_multiplier=0.33, er_multiplier=0.0,\n",
-    "        same_param=SAME_PARAM, device='cuda:0'\n",
+    "        same_param=False, device='cuda:0'\n",
     "        )\n",
     "\n",
     "    # Set up loss function and hyperparameters\n",
     "    loss_function = torch.nn.CrossEntropyLoss()\n",
+    "    for param in pnet.parameters():\n",
+    "        param.requires_grad = False\n",
     "    hyperparams = [*pnet.get_hyperparameters()]\n",
-    "    import pdb; pdb.set_trace()\n",
-    "    if SAME_PARAM:\n",
-    "        optimizer = torch.optim.Adam([\n",
-    "            {'params': hyperparams[:-1], 'lr':0.01},\n",
-    "            {'params': hyperparams[-1:], 'lr':0.0001}], weight_decay=0.00001)\n",
-    "    else:\n",
-    "        fffbmem_hp = []\n",
-    "        erm_hp = []\n",
-    "        for pc in range(pnet.number_of_pcoders):\n",
-    "            fffbmem_hp.extend(hyperparams[pc*4:pc*4+3])\n",
-    "            erm_hp.append(hyperparams[pc*4+3])\n",
-    "        optimizer = torch.optim.Adam([\n",
-    "            {'params': fffbmem_hp, 'lr':0.01},\n",
-    "            {'params': erm_hp, 'lr':0.0001}], weight_decay=0.00001)\n",
+    "    for hyperparam in hyperparams:\n",
+    "        hyperparam.requires_grad = True\n",
+    "    fffbmem_hp = []\n",
+    "    erm_hp = []\n",
+    "    for pc in range(pnet.number_of_pcoders):\n",
+    "        fffbmem_hp.extend(hyperparams[pc*4:pc*4+3])\n",
+    "        erm_hp.append(hyperparams[pc*4+3])\n",
+    "    optimizer = torch.optim.Adam([\n",
+    "        {'params': fffbmem_hp, 'lr':0.01},\n",
+    "        {'params': erm_hp, 'lr':0.0001}], weight_decay=0.00001)\n",
     "\n",
     "    # Log initial hyperparameter and eval values\n",
     "    log_hyper_parameters(pnet, 0, sumwriter, same_param=SAME_PARAM)\n",
@@ -388,72 +423,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=====================\n",
-      "AudScene, for SNR -9.0\n",
-      "=====================\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/share/ctn/users/cf2794/Code/hallucnn/src/models/layers.py:78: UserWarning: Inconsistent tf pad calculation in ConvLayer.\n",
-      "  warnings.warn('Inconsistent tf pad calculation in ConvLayer.')\n",
-      "/share/ctn/users/cf2794/Code/hallucnn/src/models/layers.py:173: UserWarning: Inconsistent tf pad calculation: 0, 1\n",
-      "  warnings.warn(f'Inconsistent tf pad calculation: {pad_left}, {pad_right}')\n",
-      "/home/cf2794/.conda/envs/hcnn/lib/python3.7/site-packages/predify/modules/base.py:260: UserWarning: Using a target size (torch.Size([10, 164, 400])) that is different to the input size (torch.Size([10, 1, 164, 400])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  self.prediction_error  = nn.functional.mse_loss(self.prd, target)\n",
-      "/home/cf2794/.conda/envs/hcnn/lib/python3.7/site-packages/predify/modules/base.py:260: UserWarning: Using a target size (torch.Size([3, 164, 400])) that is different to the input size (torch.Size([3, 1, 164, 400])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  self.prediction_error  = nn.functional.mse_loss(self.prd, target)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Test set t = 00: Average loss: 0.5165, Accuracy: 0.1812\n",
-      "Test set t = 01: Average loss: 0.5002, Accuracy: 0.1865\n",
-      "\n",
-      "> \u001b[0;32m/tmp/ipykernel_36653/3147566134.py\u001b[0m(60)\u001b[0;36mtrain_and_eval\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m     58 \u001b[0;31m    \u001b[0mhyperparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mpnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_hyperparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m     59 \u001b[0;31m    \u001b[0;32mimport\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m---> 60 \u001b[0;31m    \u001b[0;32mif\u001b[0m \u001b[0mSAME_PARAM\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m     61 \u001b[0;31m        optimizer = torch.optim.Adam([\n",
-      "\u001b[0m\u001b[0;32m     62 \u001b[0;31m            \u001b[0;34m{\u001b[0m\u001b[0;34m'params'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mhyperparams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'lr'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m0.01\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
-      "ipdb> print(hyperparams)\n",
-      "[Parameter containing:\n",
-      "tensor(-0.8473, device='cuda:0', requires_grad=True), Parameter containing:\n",
-      "tensor(-0.8473, device='cuda:0', requires_grad=True), Parameter containing:\n",
-      "tensor(-0.4055, device='cuda:0', requires_grad=True), Parameter containing:\n",
-      "tensor(0.0100, device='cuda:0', requires_grad=True), Parameter containing:\n",
-      "tensor(-0.8473, device='cuda:0', requires_grad=True), Parameter containing:\n",
-      "tensor(-0.8473, device='cuda:0', requires_grad=True), Parameter containing:\n",
-      "tensor(-0.4055, device='cuda:0', requires_grad=True), Parameter containing:\n",
-      "tensor(0.0100, device='cuda:0', requires_grad=True), Parameter containing:\n",
-      "tensor(-0.8473, device='cuda:0', requires_grad=True), Parameter containing:\n",
-      "tensor(-0.8473, device='cuda:0', requires_grad=True), Parameter containing:\n",
-      "tensor(-0.4055, device='cuda:0', requires_grad=True), Parameter containing:\n",
-      "tensor(0.0100, device='cuda:0', requires_grad=True), Parameter containing:\n",
-      "tensor(-0.8473, device='cuda:0', requires_grad=True), Parameter containing:\n",
-      "tensor(-0.8473, device='cuda:0', requires_grad=True), Parameter containing:\n",
-      "tensor(-0.4055, device='cuda:0', requires_grad=True), Parameter containing:\n",
-      "tensor(0.0100, device='cuda:0', requires_grad=True), Parameter containing:\n",
-      "tensor(-0.8473, device='cuda:0', requires_grad=True), Parameter containing:\n",
-      "tensor(-0.8473, device='cuda:0', requires_grad=True), Parameter containing:\n",
-      "tensor(-0.4055, device='cuda:0', requires_grad=True), Parameter containing:\n",
-      "tensor(0.0100, device='cuda:0', requires_grad=True)]\n",
-      "ipdb> print(pnet.get_named_hyperparameters())\n",
-      "*** AttributeError: 'PBranchedNetwork_AllSeparateHP' object has no attribute 'get_named_hyperparameters'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for noise_type in noise_types:\n",
     "    for snr_level in snr_levels:\n",
@@ -488,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
