--- a/notebooks/04-train-hyperparameters.ipynb
+++ b/notebooks/04-train-hyperparameters.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2b84576a",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +27,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "503fbc7e",
    "metadata": {},
    "source": [
     "# Global configurations"
@@ -36,8 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "5fae3c2f",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,8 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6dfb56ab",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "08c99b11",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,8 +71,77 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = FullNoisyDataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.noisy_in.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sum(np.logical_and(x.bg=='Babble8Spkr', x.snr==3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_train_datafile = '/mnt/smb/locker/abbott-locker/hcnn/hyperparameter_pooled_training_dataset_random_order_noNulls.hdf5'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from data.ReconstructionTrainingDataset import CleanSoundsDataset\n",
+    "from data.ReconstructionTrainingDataset import NoisySoundsDataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = NoisySoundsDataset(_train_datafile, subset=1., snr='neg9', bg='pink_noise')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noisy_ds = NoisyDataset(bg=noise_type, snr=snr_level)\n",
+    "noise_loader = torch.utils.data.DataLoader(\n",
+    "    noisy_ds,  batch_size=BATCH_SIZE,\n",
+    "    shuffle=True, drop_last=False,\n",
+    "    num_workers=NUM_WORKERS\n",
+    "    )\n",
+    "eval_loader = noise_loader"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "6544952f",
    "metadata": {},
    "source": [
     "# Load network arguments"
@@ -85,8 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "6c7bb8e9",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +162,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5443c46f",
    "metadata": {},
    "source": [
     "# Helper functions"
@@ -107,8 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "6d783f4c",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,8 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "2e13f12f",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,8 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "d32cdda2",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,8 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "68603d8c",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +363,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85955819",
    "metadata": {},
    "source": [
     "# Main hyperparameter optimization script"
@@ -313,8 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "5cf6488b",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +475,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ba94982",
    "metadata": {
     "scrolled": true
    },
@@ -436,7 +491,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c85b31d0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -444,7 +498,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -458,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
