--- a/notebooks/00-generate-torch-weights.ipynb
+++ b/notebooks/00-generate-torch-weights.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "26786eee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +19,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7a4bedeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +28,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "46b0f744",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +37,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "24448459",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +48,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bda83d04",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +85,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2abe11bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +94,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8c3e9b23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +103,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "316a0349",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +124,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "549df38f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +133,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6912f488",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +225,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5831d471",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +234,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3897a48e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -253,7 +241,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -267,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
