--- a/notebooks/03-train-pnet.ipynb
+++ b/notebooks/03-train-pnet.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2d99c45a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +25,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84e2f0a6",
    "metadata": {},
    "source": [
     "# Specify Network to train\n",
@@ -36,7 +34,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6d96b9c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +46,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bb699e04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +60,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7dc1e87b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +72,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "39032286",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +84,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6e000c3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +93,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "234db3b6",
    "metadata": {},
    "source": [
     "# Parameters"
@@ -109,7 +101,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "55fa91c9",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +129,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e071663f",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +164,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dcf1ed4",
    "metadata": {},
    "source": [
     "# Load network and optimizer"
@@ -183,7 +172,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f1af47ce",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +203,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fa6a1126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +211,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ef1da7e",
    "metadata": {},
    "source": [
     "#### Load checkpoint if desired!"
@@ -233,7 +219,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53301fee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +230,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77f75290",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +239,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2213e7a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +250,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "962ecdbc",
    "metadata": {},
    "source": [
     "# Set up train/test dataset"
@@ -276,7 +258,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a0e47da8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +272,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "074d57d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +287,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f32e800d",
    "metadata": {},
    "source": [
     "# Set up checkpoints and tensorboards"
@@ -316,7 +295,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "97b55f01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +313,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afaf0327",
    "metadata": {},
    "source": [
     "# Train"
@@ -344,7 +321,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50cc2640",
    "metadata": {},
    "outputs": [
     {
@@ -2800,7 +2776,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d9bf512",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2808,7 +2783,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2822,7 +2797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
