--- a/notebooks/10-compare-noise-stationarity.ipynb
+++ b/notebooks/10-compare-noise-stationarity.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1bbbbfeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +31,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7618d7e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +41,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8479e3e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +51,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fb3fd1be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +67,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8cff1fca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +76,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5f45e883",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +111,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1032adac",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +146,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "7e9ea967",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +181,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "cd6dc59f",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +216,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b8dc73b5",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +251,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc18915f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -269,7 +258,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -283,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
