Add notebook for fitting SVM model

--- a/notebooks/13-decoding-inputs.ipynb
+++ b/notebooks/13-decoding-inputs.ipynb
@@ -35,13 +35,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.svm import SVR, SVC\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import validation_curve, ShuffleSplit\n",
+    "\n",
+    "#scores = cross_val_score(clf, X_train, y_train, cv=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "netname = 'pnet'\n",
     "engram_dir = '/mnt/smb/locker/abbott-locker/hcnn/'\n",
-    "activations_dir = f'{engram_dir}3_activations/{netname}/'"
+    "pca_activations_dir = f'{engram_dir}4_activations_PCA/{netname}/'"
    ]
   },
   {
@@ -68,155 +84,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bgs = ['pinkNoise', 'AudScene', 'Babble8Spkr']\n",
-    "snrs = [-9.0, -6.0, -3.0, 0.0, 3.0]"
+    "conv_idx = 2\n",
+    "t = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load and split data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conv_idx = 1# 1-5\n",
-    "t = 0\n",
-    "X = []\n",
-    "y = []\n",
-    "for bg in bgs:\n",
-    "    for snr in snrs:\n",
-    "        activ_dir = f'{activations_dir}{bg}_snr{int(snr)}/'\n",
-    "        for results_file in os.listdir(activ_dir):\n",
-    "            results_filepath = f'{activ_dir}{results_file}'\n",
-    "            results = h5py.File(results_filepath, 'r')\n",
-    "        if conv_idx > 3:\n",
-    "            activ = np.array(results[f'conv{conv_idx}_W_{t}_activations'])\n",
-    "        else:\n",
-    "            activ = np.array(results[f'conv{conv_idx}_{t}_activations'])\n",
-    "        n_data = activ.shape[0]\n",
-    "        activ = list(activ.reshape((n_data, -1)))\n",
-    "        X.extend(activ)\n",
-    "        y.extend([snr]*n_data) # bg also possible\n",
-    "X_idxs = np.arange(len(X))\n",
-    "y_idxs = np.arange(len(y))\n",
-    "np.random.shuffle(X_idxs)\n",
-    "np.random.shuffle(y_idxs)\n",
-    "X = np.array(X)[X_idxs]\n",
-    "y = np.array(y)[y_idxs]\n",
-    "\n",
+    "data_filename = f'data_conv{conv_idx}_t{t}'\n",
+    "results = h5py.File(f'{pca_activations_dir}{data_filename}.hdf5', 'r')\n",
+    "X = np.array(results['X_pca'])\n",
+    "bgs = np.array(results['bgs'])\n",
+    "snrs = np.array(results['snrs'])\n",
+    "dset_idxs = np.array(results['dset_idxs'])\n",
+    "results.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Generate labels\n",
-    "y_values = np.unique(y)\n",
-    "y_values.sort()\n",
-    "y_labels = np.arange(1,y_values.size+1)\n",
+    "snr_values = np.unique(snrs)\n",
+    "snr_values.sort()\n",
+    "snr_labels = np.arange(1, snr_values.size+1)\n",
     "c = []\n",
-    "for _y in y:\n",
-    "    c.append(np.argwhere(y_values==_y).item())\n",
+    "for snr in snrs:\n",
+    "    c.append(np.argwhere(snr_values==snr).item())\n",
     "c = np.array(c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pca = PCA(n_components=1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pca.fit(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sum(pca.explained_variance_ratio_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_pca = pca.transform(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_pca.shape"
+    "X_train, X_test, y_train, y_test = train_test_split(X, c, test_size=0.2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project and split data"
+    "# Cross-validate on train for hyperparameter choice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_ratio = 0.9\n",
-    "n_train = int(train_ratio*len(X_pca))\n",
-    "X_train = X_pca[:n_train]\n",
-    "y_train = y[:n_train]\n",
-    "c_train = c[:n_train]\n",
-    "X_valid = X_pca[n_train:]\n",
-    "y_valid = y[n_train:]\n",
-    "c_valid = c[n_train:]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Fit SVM model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.svm import SVR, SVC\n",
-    "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.preprocessing import StandardScaler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "Cs = np.logspace(-4.5, -2, 10)\n",
     "scaler = StandardScaler()\n",
-    "model = SVC(kernel='linear', gamma='auto')\n",
-    "clf = make_pipeline(scaler,  model)"
+    "model = SVC(kernel='rbf')\n",
+    "clf = make_pipeline(scaler,  model)\n",
+    "cv = ShuffleSplit(test_size=0.2, n_splits=5)\n",
+    "train_scores, test_scores = validation_curve(\n",
+    "    clf, X_train, y_train, param_name=\"svc__C\", param_range=Cs, cv=cv\n",
+    "    )\n",
+    "test_scores.mean(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fit to train data "
    ]
   },
   {
@@ -241,12 +188,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Predict on test and summarize performance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "chat_valid = clf.predict(X_valid)"
+    "yhat_test = clf.predict(X_test)"
    ]
   },
   {
@@ -279,7 +233,7 @@
    "source": [
     "# Classifier\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
-    "cmat = confusion_matrix(c_valid, chat_valid)\n",
+    "cmat = confusion_matrix(y_test, yhat_test)\n",
     "disp = ConfusionMatrixDisplay(confusion_matrix=cmat, display_labels=clf.classes_)\n",
     "disp.plot()\n",
     "plt.show()"
@@ -303,76 +257,7 @@
    ],
    "source": [
     "# conv_idx = 3, t = 4\n",
-    "clf.score(X_valid, c_valid)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Copy of activation keys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.22584541062801933"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# conv_idx = 3, t = 4\n",
-    "clf.score(X_valid, c_valid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.2028985507246377"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# conv_idx = 3, t = 0\n",
-    "clf.score(X_valid, c_valid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<KeysViewHDF5 ['0_clean_logits', '0_clean_output', '0_logits', '0_output', '1_clean_logits', '1_clean_output', '1_logits', '1_output', '2_clean_logits', '2_clean_output', '2_logits', '2_output', '3_clean_logits', '3_clean_output', '3_logits', '3_output', '4_clean_logits', '4_clean_output', '4_logits', '4_output', 'clean_correct', 'conv1_0_activations', 'conv1_0_clean_activations', 'conv1_1_activations', 'conv1_1_clean_activations', 'conv1_2_activations', 'conv1_2_clean_activations', 'conv1_3_activations', 'conv1_3_clean_activations', 'conv1_4_activations', 'conv1_4_clean_activations', 'conv2_0_activations', 'conv2_0_clean_activations', 'conv2_1_activations', 'conv2_1_clean_activations', 'conv2_2_activations', 'conv2_2_clean_activations', 'conv2_3_activations', 'conv2_3_clean_activations', 'conv2_4_activations', 'conv2_4_clean_activations', 'conv3_0_activations', 'conv3_0_clean_activations', 'conv3_1_activations', 'conv3_1_clean_activations', 'conv3_2_activations', 'conv3_2_clean_activations', 'conv3_3_activations', 'conv3_3_clean_activations', 'conv3_4_activations', 'conv3_4_clean_activations', 'conv4_W_0_activations', 'conv4_W_0_clean_activations', 'conv4_W_1_activations', 'conv4_W_1_clean_activations', 'conv4_W_2_activations', 'conv4_W_2_clean_activations', 'conv4_W_3_activations', 'conv4_W_3_clean_activations', 'conv4_W_4_activations', 'conv4_W_4_clean_activations', 'conv5_W_0_activations', 'conv5_W_0_clean_activations', 'conv5_W_1_activations', 'conv5_W_1_clean_activations', 'conv5_W_2_activations', 'conv5_W_2_clean_activations', 'conv5_W_3_activations', 'conv5_W_3_clean_activations', 'conv5_W_4_activations', 'conv5_W_4_clean_activations', 'fc6_W_0_activations', 'fc6_W_0_clean_activations', 'fc6_W_1_activations', 'fc6_W_1_clean_activations', 'fc6_W_2_activations', 'fc6_W_2_clean_activations', 'fc6_W_3_activations', 'fc6_W_3_clean_activations', 'fc6_W_4_activations', 'fc6_W_4_clean_activations', 'label', 'pnet_correct']>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results.keys()"
+    "clf.score(X_test, y_test)"
    ]
   },
   {
