Reorganize notebooks for initial figure draft order

--- a/notebooks/13-eval-popln-denoising.ipynb
+++ b/notebooks/13-eval-popln-denoising.ipynb
@@ -46,25 +46,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = 'pnet'\n",
     "engram_dir = '/mnt/smb/locker/abbott-locker/hcnn/'\n",
-    "pickles_dir = f'{engram_dir}pickles/pnet_denoising/'\n",
+    "pickles_dir = f'{engram_dir}pickles/'\n",
     "file_prefix = 'pearsonr'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Device: cpu\n"
+      "Device: cuda:0\n"
      ]
     }
    ],
