--- a/notebooks/11-visualize-feedback-filters.ipynb
+++ b/notebooks/11-visualize-feedback-filters.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dad6bab8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +16,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d2f977c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +25,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "83906fc4",
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +46,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62f7a8ef",
    "metadata": {},
    "source": [
     "# PNET"
@@ -57,7 +53,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07229002",
    "metadata": {},
    "source": [
     "### Forward filter"
@@ -66,7 +61,6 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "24e154f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +72,6 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "eb8ea129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +84,6 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "9a567d61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +93,6 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "687bf437",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +102,6 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "e9c787d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +111,6 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "00064740",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +138,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec9039d3",
    "metadata": {},
    "source": [
     "### Feedback filter"
@@ -158,7 +146,6 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "03fe12de",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +166,6 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "ef4518af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +175,6 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "065cfa5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +184,6 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "134f419a",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +211,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad6a60c6",
    "metadata": {},
    "source": [
     "# PNET-Noisy"
@@ -235,7 +218,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "051eb894",
    "metadata": {},
    "source": [
     "### Forward filter"
@@ -244,7 +226,6 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "d4109c67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +237,6 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "8a0ee4cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +249,6 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "646da0b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +258,6 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "e40a8a96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +267,6 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "93ac1354",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +276,6 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "167589b1",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +303,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3dcf11d",
    "metadata": {},
    "source": [
     "### Feedback filter"
@@ -336,7 +311,6 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "8ef05a0d",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +331,6 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "af8cb063",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +340,6 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "84524bd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +349,6 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "6f345d30",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +377,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bdaf65a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -414,7 +384,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -428,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
